Refs #1272 - bye bye MeetMe, welcome ConfBridge for interphone

--- a/src/lmce-asterisk/root/etc/asterisk/extensions.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/extensions.conf
@@ -268,7 +268,7 @@ exten => 666,3,Hangup
 exten => 997,1,Answer
 exten => 997,2,Wait(1)
 exten => 997,3,Set(TIMEOUT(absolute)=150) 
-exten => 997,4,MeetMe(997,q)
+exten => 997,4,ConfBridge(997,q)
 exten => 997,5,Hangup
 exten => 998,1,Goto(pluto-console-custom,s,1)
 exten => 998,2,Hangup
