--- a/src/lmce-asterisk/root/etc/asterisk/modules.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/modules.conf
@@ -13,6 +13,7 @@ preload => res_config_mysql.so          ; MySQL Configuration
 ;load => res_monitor.so                 ; Call Monitoring Resource 
 load => res_musiconhold.so       		; Music On Hold Resource 
 ;load => res_odbc.so                    ; ODBC Resource
+load => res_timing_timerfd.so			; Timerfd Timing Interface
 
 ;  PBX -- 
 ;load => pbx_ael.so                     ; Asterisk Extension Language Compiler - Requires ?
@@ -47,20 +48,15 @@ load => func_extstate.so				; Gets an extension's state in the dialplan
 
 ;  Channels -- 
 ;load => chan_agent.so          		; Agent Proxy Channel -  Requires res_features.so, res_monitor.so, res_musiconhold.so 
-;load => chan_features.so       		; Provides summary information on feature channels-  Requires N/A 
 load => chan_iax2.so            		; Inter Asterisk eXchange (Ver 2) - Requires res_crypto.so, res_features.so 
 load => chan_local.so           		; Show status of local channels-  Requires N/A 
 ;load => chan_mgcp.so           		; Media Gateway Control Protocol (MGCP) - Requires res_features.so 
-;load => chan_modem.so          		; Generic Voice Modem Driver - Requires N/A 
-;load => chan_modem_aopen.so    		; A/Open (Rockwell Chipset) ITU-2 VoiceMod- Requires chan_modem.so 
-;load => chan_modem_bestdata.so 		; BestData (Conexant V.90 Chipset) VoiceModem - Requires chan_modem.so 
-;load => chan_modem_i4l.so      		; ISDN4Linux Emulated Modem Driver - Requires chan_modem.so 
+;load => chan_gtalk.so           		; 
 ;load => chan_oss.so            		; OSS Console Channel Driver - Requires N/A 
 ;load => chan_phone.so          		; Linux Telephony API Support - Requires N/A 
 load => chan_sip.so             		; Session Initiation Protocol (SIP) -  Requires res_features.so 
 load => chan_sccp.so            		; LinuxMCE SCCP support 
-;load => chan_skinny.so         		; Skinny Client Control Protocol (Skinny) - Requires res_features.so 
-;load => chan_zap.so            		; Zapata Telephony w/PRI - Requires res_features.so
+;load => chan_dahdi.so            		; DAHDI Telephony Driver w/PRI & SS7
 
 ;  Codecs -- 
 load => codec_adpcm.so          		; Adaptive Differential PCM Coder/Decoder - Requires N/A 
@@ -102,6 +98,7 @@ load => app_cdr.so              ; Tell Asterisk to not maintain a CDR for the cu
 ;load => app_chanspy.so         ; Listen to the audio of an active channel - Requires N/A 
 ;load => app_controlplayback.so ; Play a file with fast forward and rewind - Requires N/A 
 ;load => app_curl.so            ; ? - Requires N/A 
+load => app_confbridge.so		; Conference Bridge Application - Replaces MeetMe, does not require dahdi
 load => app_db.so               ; Database access functions for Asterisk -  Requires N/A 
 load => app_dial.so             ; Dialing Application - Requires res_features.so, res_musiconhold.so 
 ;load => app_dictate.so         ; Virtual Dictation Machine - Requires N/A 
@@ -170,9 +167,12 @@ load => app_voicemail.so                ; Comedian Mail (Voicemail System) - Req
 ;load => app_waitforsilence.so          ; Waits for silence of specified time - Requires N/A 
 ;load => app_while.so                   ; While Loops and Conditional Execution - Requires N/A 
 ;load => app_zapateller.so              ; Block Telemarketers with Special Information Tone - Requires N/A 
-;load => app_zapbarge.so                ;  Barges in on a specified zap channel - Requires ?
-;load => app_zapras.so                  ;  Executes a RAS server using pppd on the given channel - Requires ?
+;load => app_zapbarge.so                ; Barges in on a specified zap channel - Requires ?
+;load => app_zapras.so                  ; Executes a RAS server using pppd on the given channel - Requires ?
 ;load => app_zapscan.so                 ; Scan Zap channels to monitor calls - Requires ?
 
-[global]
-chan_modem.so=yes
+;  Bridging -- 
+load => bridge_builtin_features.so		; Built in bridging features
+load => bridge_softmix.so				; Multi-party software based channel mixing
+;load => bridge_simple.so				; Simple two channel bridging module
+load => bridge_multiplexed.so			; Multiplexed two channel bridging module
