--- a/src/lmce-asterisk/root/etc/asterisk/extensions.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/extensions.conf
@@ -465,7 +465,7 @@ exten => _s-.,n,Congestion(10)
 
 [macro-vm]
 exten => s,1,Macro(user-callerid,SKIPTTL)
-exten => s,n,Set(VMGAIN=${IF($["foo${VM_GAIN}"!="foo"]?"g(${VM_GAIN})":"")})
+exten => s,n,Set(VMGAIN=${IF($["foo${VM_GAIN}"!="foo"]?"g(${VM_GAIN})":"0")})
 exten => s,n,GotoIf($["foo${DB(${BLKVM_OVERRIDE})}" != "fooTRUE"]?vmx,1)
 exten => s,n,Noop(CAME FROM: ${NODEST} - Blocking VM cause of key: ${DB(BLKVM_OVERRIDE)})
 exten => vmx,1,GotoIf($["${ARG2}"="NOMESSAGE"]?s-${ARG2},1)
