--- a/src/Game_Player/Makefile
+++ b/src/Game_Player/Makefile
@@ -18,7 +18,9 @@ MYDEVTEMPLATEID = 1965mplateID
 Gen_Dev_Files = $(GENDEV)/Game_PlayerBase.cpp
 sources = Main.cpp Game_Player.cpp $(Gen_Dev_Files) \
 	EmulatorModel.cpp \
-	EmulatorController.cpp
+	EmulatorController.cpp \
+	X11EmulatorModel.cpp \
+	X11EmulatorController.cpp
 #<-dceag-mh-e->
 
 CXXFLAGS += 
