--- a/ubuntu/asterisk/Chan_SCCP-3.0.4_STABLE/debian/control
+++ b/ubuntu/asterisk/Chan_SCCP-3.0.4_STABLE/debian/control
@@ -10,6 +10,7 @@ Package: chan-sccp-b
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
+Conflicts: chan-sccp
 Description: chan-sccp-b is a branch from the original chan-sccp
  implementation of Skinny Client Control Protocol (SCCP) for the Asterisk
  soft-PBX. It is mainly focused on extending the functionality provided by
