Refs #1272 - remove php-db dependency: We are not FreePBX

--- a/src/lmce-asterisk/debian/control
+++ b/src/lmce-asterisk/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 3.6.1
 
 Package: lmce-asterisk
 Architecture: any
-Depends: php-db, pluto-boot-scripts, chan-sccp-b, asterisk-sounds-extra, asterisk-mysql
+Depends: pluto-boot-scripts, chan-sccp-b, asterisk-sounds-extra, asterisk-mysql
 Provides: asterisk-config-custom
 Conflicts: freepbx, asterisk-pluto, asterisk-custom-config
 Replaces: asterisk-config
