Refs #1272 - Some tweaks to scripts while trying to get incoming connections working

--- a/src/lmce-asterisk/root/etc/asterisk/extensions.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/extensions.conf
@@ -383,7 +383,7 @@ include => from-lmce-custom
 [from-lmce-custom]
 switch => Realtime
 
-[voice-menu-pluto-custom]
+[voice-menu-lmce-custom]
 switch => Realtime
 
 [from-trunk]							; just an alias since VoIP shouldn't be called PSTN
