Refs #1272 - Create correct incoming context per line

--- a/src/lmce-asterisk/root/etc/asterisk/extensions.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/extensions.conf
@@ -193,11 +193,7 @@ exten => _[*#X].,n,Goto(ext-did,s,1)
 include => from-lmce-custom
 switch => Realtime
 
-[from-trunk-20408720]
-switch => Realtime
-
-[from-trunk-20403987]
-switch => Realtime
+#include "extensions-lmce-trunks.conf"
 
 [outbound-allroutes]
 switch => Realtime
