Refs #1299, #1272 - Create host based sip device entry for incoming calls to work. Still a lot to do, but seeing tunnel end's light already

--- a/src/lmce-asterisk/root/etc/asterisk/extconfig.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/extconfig.conf
@@ -8,11 +8,10 @@ sccpline => mysql,general,sccpline
 
 voicemail => mysql,general,voicemail_users
 extensions => mysql,general,extensions
-meetme => mysql,general,meetme
 
 sip.conf => mysql,general,ast_config
 iax.conf => mysql,general,ast_config
 voicemail.conf => mysql,general,ast_config
 musiconhold.conf => mysql,general,ast_config
 rtp.conf => mysql,general,ast_config
-meetme.conf => mysql,general,ast_config
+ccss.conf => mysql,general,ast_config
