--- a/src/lmce-asterisk/root/etc/asterisk/modules.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/modules.conf
@@ -2,18 +2,12 @@
 autoload=no 
 
 ;  Resources -- 
-;load => res_adsi.so                    ; ADSI Resource 
+preload => res_config_mysql.so          ; MySQL Configuration  
 load => res_speech.so                   ; Generic Speech Recognition API 
 load => res_agi.so                     	; Asterisk Gateway Interface (AGI) 
-preload => res_config_mysql.so          ; MySQL Configuration  
-;load => res_config_odbc.so             ; ODBC Configuration  
-;load => res_crypto.so                  ; Cryptographic Digital Signatures  
-;load => res_features.so                ; Call Parking Resource 
-;load => res_indications.so             ; Indications Configuration
-;load => res_monitor.so                 ; Call Monitoring Resource 
 load => res_musiconhold.so       		; Music On Hold Resource 
-;load => res_odbc.so                    ; ODBC Resource
 load => res_timing_timerfd.so			; Timerfd Timing Interface
+load => res_rtp_asterisk.so				; Asterisk RTP Stack
 
 ;  PBX -- 
 ;load => pbx_ael.so                     ; Asterisk Extension Language Compiler - Requires ?
