Refs #757 - For lucid, python25 provides elementree and celementtree in its base package

--- a/ubuntu/Coherence-0.6.6.2/debian/control
+++ b/ubuntu/Coherence-0.6.6.2/debian/control
@@ -15,10 +15,10 @@ Package: python-coherence
 Architecture: all
 Depends: ${misc:Depends},
          ${python:Depends},
-         python-celementtree,
+         python2.6-celementtree | python-celementtree,
          python-configobj,
          python2.5 | python-ctypes,
-         python-elementtree,
+         python2.6-elementtree | python-elementtree,
          python-gst0.10,
          python-louie,
          python-pkg-resources,
