Refs #757 - Update control file to add python-mysqldb as a dependency Update changelog to reflect dependencies and lmce_storage changes

--- a/ubuntu/Coherence-0.6.6.2/debian/control
+++ b/ubuntu/Coherence-0.6.6.2/debian/control
@@ -21,6 +21,7 @@ Depends: ${misc:Depends},
          python2.6-elementtree | python-elementtree,
          python-gst0.10,
          python-louie,
+         python-mysqldb,
          python-pkg-resources,
          python-twisted-core,
          python-twisted-web,
