--- a/src/lmce-asterisk/root/etc/asterisk/extensions.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/extensions.conf
@@ -191,6 +191,7 @@ exten => _[*#X].,n,Goto(ext-did,s,1)
 
 [ext-local]
 include => from-lmce-custom
+#include "hints.conf"
 switch => Realtime
 
 #include "extensions-lmce-trunks.conf"
