Refs #1272 - replace _. with _X. to get rid of another warning, and the two changes should be fine.

--- a/src/lmce-asterisk/root/etc/asterisk/extensions.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/extensions.conf
@@ -299,9 +299,10 @@ exten => s,n,Wait(1)
 exten => s,n,Set(TIMEOUT(digit)=3)
 exten => s,n,Set(TIMEOUT(response)=4)
 exten => s,n,Background(pluto/enterpin)
-exten => _.,1,SetGlobalVar(PIN=${EXTEN})
-exten => _.,n,NoOp(Username: ${USER} PIN: ${PIN})
-exten => _.,n,AGI(linuxmce-validate-user-pin.agi,${USER},${PIN})
+; We use _X. instead of _. - for PINs that's okay.
+exten => _X.,1,SetGlobalVar(PIN=${EXTEN})
+exten => _X.,n,NoOp(Username: ${USER} PIN: ${PIN})
+exten => _X.,n,AGI(linuxmce-validate-user-pin.agi,${USER},${PIN})
 exten => *,1,Goto(linuxmce-validate-user,s,1)
 exten => *,n,Hangup
 exten => #,1,Goto(s,3)
@@ -999,9 +1000,11 @@ exten => s,n,SayDigits(${ARG1})
 exten => s,n,Goto(done)
 
 [from-sip-external]
-exten => _.,1,NoOp(Received incoming SIP connection from unknown peer to ${EXTEN})
-exten => _.,n,Set(DID=${IF($["${EXTEN:1:2}"=""]?s:${EXTEN})})
-exten => _.,n,Goto(s,1)
+; We assume that _X. isn't a problem instead of _. here as well. We do not expect
+; non alpha-nummeric extensions.
+exten => _X.,1,NoOp(Received incoming SIP connection from unknown peer to ${EXTEN})
+exten => _X.,n,Set(DID=${IF($["${EXTEN:1:2}"=""]?s:${EXTEN})})
+exten => _X.,n,Goto(s,1)
 exten => s,1,GotoIf($["${ALLOW_SIP_ANON}"="yes"]?from-trunk,${DID},1)
 exten => s,n,Set(TIMEOUT(absolute)=15)
 exten => s,n,Answer
