Refs #1272 - add a dependency to have at least asterisk 1.8.0

--- a/ubuntu/asterisk/chan_sccp_v4/debian/control
+++ b/ubuntu/asterisk/chan_sccp_v4/debian/control
@@ -9,7 +9,7 @@ Homepage: chan-sccp-b.sourceforge.net
 Package: chan-sccp-b
 Section: libs
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, asterisk (>= 1.8.0)
 Description: chan-sccp-b is a branch from the original chan-sccp
  implementation of Skinny Client Control Protocol (SCCP) for the Asterisk
  soft-PBX. It is mainly focused on extending the functionality provided by
