refs #-1: makefile fixes

--- a/src/CreateDevice/Makefile
+++ b/src/CreateDevice/Makefile
@@ -1,11 +1,11 @@
 ROOT=..
 
-CXX=g++
+CXX?=g++
 CC=$(CXX)
-CPPFLAGS=-W -Wall -pipe -ggdb3
-CXXFLAGS=-I. -I.. -I$(ROOT) -I$(ROOT)/DCE
-LDFLAGS=-L$(ROOT)/lib
-LDLIBS=-lDCECommon -lSerializeClass -lPlutoUtils
+CPPFLAGS+=-W -Wall -pipe -ggdb3
+CXXFLAGS+=-I. -I.. -I$(ROOT) -I$(ROOT)/DCE
+LDFLAGS+=-L$(ROOT)/lib
+LDLIBS+=-lDCECommon -lSerializeClass -lPlutoUtils
 
 #<-mkr_B_use_mysql_wrapper_b->
 CPPFLAGS += -I/usr/include/mysql
