--- a/src/sqlCVS/Makefile
+++ b/src/sqlCVS/Makefile
@@ -1,9 +1,9 @@
 ROOT = ..
-CXXFLAGS = -Wall -g 
-CPPFLAGS = -I$(ROOT)/ -I$(ROOT)/DCE -I$(ROOT)/VIPShared -I/usr/include/mysql -D_REENTRANT -D_GNU_SOURCE -D_DEVEL_X_DEFINES -DGENERATOR
-LDFLAGS = -L$(ROOT)/lib 
-LDLIBS = -lRACommon -lDCECommon -lPlutoUtils -lSerializeClass -lpthread -lmysqlclient_r -lattr 
-CXX = g++
+CXXFLAGS += -Wall -g 
+CPPFLAGS += -I$(ROOT)/ -I$(ROOT)/DCE -I$(ROOT)/VIPShared -I/usr/include/mysql -D_REENTRANT -D_GNU_SOURCE -D_DEVEL_X_DEFINES -DGENERATOR
+LDFLAGS += -L$(ROOT)/lib 
+LDLIBS += -lRACommon -lDCECommon -lPlutoUtils -lSerializeClass -lpthread -lmysqlclient_r -lattr 
+CXX ?= g++
 
 sources = A_UpdateRow.cpp ChangedRow.cpp CommonFunctions.cpp Database.cpp Field.cpp ../sql2cpp/FieldInfo.cpp \
 	R_CommitChanges.cpp R_CommitRow.cpp R_CommitTable.cpp R_GetAll_psc_id.cpp R_UpdateRepository.cpp \
