Refs #1332 - experimental GTALK support as phoneline provider in lmce-asterisk

--- a/src/lmce-asterisk/root/etc/asterisk/extconfig.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/extconfig.conf
@@ -15,3 +15,5 @@ voicemail.conf => mysql,general,ast_config
 musiconhold.conf => mysql,general,ast_config
 rtp.conf => mysql,general,ast_config
 ccss.conf => mysql,general,ast_config
+jabber.conf => mysql,general,ast_config
+gtalk.conf => mysql,general,ast_config
