Refs #1354 - First step towards fax support in LinuxMCE

--- a/src/lmce-asterisk/root/etc/asterisk/modules.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/modules.conf
@@ -9,6 +9,9 @@ load => res_musiconhold.so       		; Music On Hold Resource
 load => res_timing_timerfd.so			; Timerfd Timing Interface
 load => res_rtp_asterisk.so				; Asterisk RTP Stack
 load => res_jabber.so					; AJI - Asterisk Jabber Interface
+load => res_fax.so						; Generic FAX Applications
+load => res_fax_spandsp.so				; Spandsp G.711 and T.38 FAX Technologies
+
 
 ;  PBX -- 
 load => pbx_config.so                  	; Text Extension Configuration  Requires N/A 
@@ -32,12 +35,7 @@ load => func_extstate.so				; Gets an extension's state in the dialplan
 
 ;  Database Call Detail Records -- 
 ;load => cdr_addon_mysql.so        		; Mysql CDR Backend - Requires ?
-;load => cdr_csv.so                     ; Comma Separated Values CDR Backend -  Requires N/A 
-;load => cdr_custom.so                	; Customizable Comma Separated Values CDR Backend - Requires N/A 
 ;load => cdr_manager.so              	; Asterisk Call Manager CDR Backend - Requires N/A 
-;load => cdr_odbc.so                    ; ODBC CDR Backend - Requires N/A 
-;load => cdr_pgsql.so                   ; PostgreSQL CDR Backend -  Requires N/A 
-;load => cdr_sqlite.so                  ; SQLite CDR Backend - Requires N/A
 
 ;  Channels -- 
 ;load => chan_agent.so          		; Agent Proxy Channel -  Requires res_features.so, res_monitor.so, res_musiconhold.so 
