Refs #1272, #1354 - Started to clean up dialplan and to move applications to realtime. Preparing phonelines table for fax support.

--- a/src/lmce-asterisk/root/etc/asterisk/extensions.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/extensions.conf
@@ -107,12 +107,6 @@ switch => Realtime
 [app-speakingclock]
 switch => Realtime
 
-[app-test-moh]
-exten => *96,1,Answer
-exten => *96,2,Wait(1)
-exten => *96,3,MusicOnHold()
-exten => *96,4,Hangup
-
 [app-dialvm]
 exten => *98,1,Answer
 exten => *98,n,Wait(1)
@@ -235,20 +229,15 @@ exten => _*.,n,Wait(1)
 exten => _*.,n,Congestion(20)
 exten => _*.,n,Hangup
 
+[applications]
+switch => realtime
+
 [from-internal-additional]
-;include => ext-group
-;include => grps
 include => app-calltrace
 include => app-directory
-include => app-echo-test
-include => app-speakextennum
-include => app-speakingclock
-include => app-test-moh
 include => app-dialvm
 include => app-vmmain
 include => app-recordings
-;include => ext-meetme
-;include => ext-queues
 include => app-userlogonoff
 include => app-pickup
 include => app-zapbarge
@@ -256,6 +245,7 @@ include => app-chanspy
 include => ext-test
 include => ext-local
 include => outbound-allroutes
+include => applications
 exten => h,1,Hangup
 
 [from-internal-custom]
