Refs #1272 - Fixed bug preventing registration to IAX2 trunk providers

--- a/src/lmce-asterisk/root/etc/asterisk/modules.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/modules.conf
@@ -4,6 +4,7 @@ autoload=no
 ;  Resources -- 
 preload => res_config_mysql.so          ; MySQL Configuration  
 load => res_speech.so                   ; Generic Speech Recognition API 
+load => res_crypto.so					; Cryptographic Digital Signatures
 load => res_agi.so                     	; Asterisk Gateway Interface (AGI) 
 load => res_musiconhold.so       		; Music On Hold Resource 
 load => res_timing_timerfd.so			; Timerfd Timing Interface
@@ -21,10 +22,9 @@ load => pbx_realtime.so                	; Realtime Dialplan Switch -  Requires N
 ;load => pbx_spool.so                   ; Outgoing Spool Support Requires - N/A 
 
 ;  Functions -- 
+load => func_aes.so						; AES dialplan functions
 load => func_callerid.so                ; Gets or sets Caller*ID data on the channel. - Requires ?
 load => func_cut.so						; Cut out information from a string
-;load => func_enum.s                    ; ENUMLOOKUP and TXTCIDNAME functions - Requres ?
-;load => func_uri.so                    ; URI encode/decode functions - Requires ?
 load => func_logic.so					; Logical dialplan functions
 load => func_db.so						; Database (astdb) related dialplan functions
 load => func_strings.so 				; String handling dialplan functions
@@ -38,12 +38,10 @@ load => func_extstate.so				; Gets an extension's state in the dialplan
 ;load => cdr_manager.so              	; Asterisk Call Manager CDR Backend - Requires N/A 
 
 ;  Channels -- 
-;load => chan_agent.so          		; Agent Proxy Channel -  Requires res_features.so, res_monitor.so, res_musiconhold.so 
 load => chan_iax2.so            		; Inter Asterisk eXchange (Ver 2) - Requires res_crypto.so, res_features.so 
 load => chan_local.so           		; Show status of local channels-  Requires N/A 
 ;load => chan_mgcp.so           		; Media Gateway Control Protocol (MGCP) - Requires res_features.so 
 load => chan_gtalk.so           		; Gtalk Channel Driver
-;load => chan_oss.so            		; OSS Console Channel Driver - Requires N/A 
 ;load => chan_phone.so          		; Linux Telephony API Support - Requires N/A 
 load => chan_sip.so             		; Session Initiation Protocol (SIP) -  Requires res_features.so 
 load => chan_sccp.so            		; LinuxMCE SCCP support 
