Fixes #1356 Add -fpermissive as we still need to build on older gcc at the moment too.

--- a/src/DCE/Makefile
+++ b/src/DCE/Makefile
@@ -3,7 +3,7 @@ SNR_CPPFLAGS ?= -DKDE_LMCE -DDEBUG -DTHREAD_LOG -DLOG_ALL_QUERIES
 ROOT = ..
 VIP = ../VIPShared
 GDEV = ./Gen_Devices
-CXXFLAGS ?= -fPIC -Wall -ggdb3
+CXXFLAGS ?= -fpermissive -fPIC -Wall -ggdb3
 CPPFLAGS ?= -I./ -I../ -I../DCE/ -I../VIPShared/ -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE $(SNR_CPPFLAGS) -DUSE_LZO_DATAGRID -D_GNU_SOURCE -DLINK_TO_ROUTER $(EXTRA)
 CXX ?= g++
 LDFLAGS ?=
