--- a/src/HAL/Makefile
+++ b/src/HAL/Makefile
@@ -20,6 +20,7 @@ sources = Main.cpp HAL.cpp $(Gen_Dev_Files)
 #<-dceag-mh-e->
 
 CPPFLAGS += -I/usr/include/dbus-1.0/ -I/usr/include/hal \
+	-I/usr/lib/i386-linux-gnu/dbus-1.0/include/dbus \
 	-I/usr/lib/dbus-1.0/include -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include \
 	-DDBUS_API_SUBJECT_TO_CHANGE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE \
 	$(SNR_CPPFLAGS) -DUSE_LZO_DATAGRID -D_GNU_SOURCE
