--- a/src/qOrbiter/qOrbiter_src/qtc_packaging/debian_harmattan/rules
+++ b/src/qOrbiter/qOrbiter_src/qtc_packaging/debian_harmattan/rules
@@ -28,7 +28,7 @@ build-stamp: configure-stamp
 
 	# Add here commands to compile the package.
 	# $(MAKE) # Uncomment this line for use without Qt Creator
-	#docbook-to-man debian/qorbiter-src.sgml > qorbiter-src.1
+	#docbook-to-man debian/qorbiter.sgml > qorbiter-src.1
 
 	touch $@
 
@@ -48,8 +48,8 @@ install: build
 	dh_clean -k 
 	dh_installdirs
 
-	# Add here commands to install the package into debian/qorbiter-src.
-	$(MAKE) INSTALL_ROOT="$(CURDIR)"/debian/qorbiter-src install
+	# Add here commands to install the package into debian/qorbiter.
+	$(MAKE) INSTALL_ROOT="$(CURDIR)"/debian/qorbiter install
 
 
 # Build architecture-independent files here.
