Refs #1298 - Initial checkin of updates for upstart process

--- a/src/BootScripts/bind9.conf
+++ b/src/BootScripts/bind9.conf
@@ -19,6 +19,9 @@ pre-start script
 end script
 
 script
+	env PIDFILE=/var/run/named/named.pid
+	env OPTIONS=""
 	[ -f /etc/default/bind9 ] && . /etc/default/bind9
+	exec /bin/plymouth update --status="Starting bind9 ... "
 	exec /usr/sbin/named --pidfile ${PIDFILE} -- $OPTIONS
 end script
