--- a/src/BootScripts/hald.conf
+++ b/src/BootScripts/hald.conf
@@ -16,4 +16,7 @@ emits starting-hal
 expect fork
 respawn
 
-exec hald --daemon
+script
+	/bin/plymouth update --status="Starting HALD ... "
+	exec /usr/sbin/hald --daemon=yes --use-syslog
+end script
