--- a/src/BootScripts/dhcp3.conf
+++ b/src/BootScripts/dhcp3.conf
@@ -11,6 +11,9 @@ stop on runlevel [!2345]
 expect fork
 console output
 
+env CONFIG_FILE=/etc/dhcp3/dhcpd.conf
+
+
 pre-start script
 	  # Get things cleaned up and made so dhcpd doesn't cry like a little bitch.
 	  [ -f /etc/default/dhcp3-server ] && . /etc/default/dhcp3-server
@@ -23,5 +26,6 @@ end script
 
 script
 	[ -f /etc/default/dhcp3-server ] && . /etc/default/dhcp3-server
+	/bin/plymouth update --status="Starting DHCP3 Server... "
 	exec /usr/sbin/dhcpd3 -q -pf /var/run/dhcp3-server/dhcpd.pid-cf $CONFIG_FILE  $INTERFACES
 end script
