--- a/src/BootScripts/nis.conf
+++ b/src/BootScripts/nis.conf
@@ -1,10 +1,15 @@
 # nis - control nis start up so it can start before rc-sysinit
 
 description "NIS"
-author "Jeremy Yoder"
+author "Ryan Montgomery <ryan@montysplace.org>"
 
 start on (filesystem and started portmap)
 stop on runlevel[!2345]
 
-pre-start exec /etc/init.d/nis start
-post-stop exec /etc/init.d/nis stop
+env YPSERVARGS=""
+
+post-start script
+	exec /bin/plymouth update --status="Starting NIS ... "
+        exec /usr/sbin/ypserv -- ${YPSERVARGS}
+end script
+
