Refs #1298 - More updates for upstart process

--- a/src/BootScripts/bind9.conf
+++ b/src/BootScripts/bind9.conf
@@ -19,8 +19,8 @@ pre-start script
 end script
 
 script
-	env PIDFILE=/var/run/named/named.pid
-	env OPTIONS=""
+	PIDFILE=/var/run/named/named.pid
+	OPTIONS=""
 	[ -f /etc/default/bind9 ] && . /etc/default/bind9
 	exec /bin/plymouth update --status="Starting bind9 ... "
 	exec /usr/sbin/named --pidfile ${PIDFILE} -- $OPTIONS
