Refs #1414, #1298 - changes to the detection scripts by l3mce, both for the original av wizard start script, and the AVStart Update config file

--- a/src/BootScripts/StartAVWizard.conf
+++ b/src/BootScripts/StartAVWizard.conf
@@ -11,16 +11,15 @@ stop on runlevel [!2345]
 expect fork
 console output
 
-pre-start script
 if [ "$1" == "status" ] ; then
-        if [ pidof AVWizard_Run.sh &> /dev/null ] ; then
-                echo "* AVWizard is running"
-        else
-                echo "* AVWizard is not running"
-        fi
-        exit 0
+	if [ pidof AVWizard_Run.sh &> /dev/null ] ; then
+        	echo "* AVWizard is running"
+	else
+		echo "* AVWizard is not running"
+	fi
+	exit 0
 fi
-
+                                                                
 StartService() {
         ServiceDescription=$1
         ServiceCmd=$2
@@ -47,35 +46,93 @@ StartService() {
 
         return $err
 }
-
-. /usr/pluto/bin/Config_Ops.sh
-#. /usr/pluto/bin/nvidia-install.sh
-## Install driver based on the type of video card used
-if lshwd | grep -qi 'VGA .* (nv)'; then
-        StartService "Installing Nvidia driver - this will take a few minutes" "/usr/pluto/bin/nvidia-install.sh"
-        VerifyExitCode "Install Pluto nVidia Driver"
-elif lshwd | grep -qi 'VGA .* (radeon)'; then
-        # Check to see if old Radeon card, if so, do not install new driver
-        #Installing fglrx on a card older than the Radeon 9500 will break your 3d acceleration with the free ATI driver
-        if ! lshwd | grep -Pqi 'VGA .*Radeon ((9|X|ES)(1|2?)([0-9])(5|0)0|Xpress) (.*) \(radeon\)'; then
-                StartService "Installing ATI driver - this will take a few minutes" "apt-get -y -f install xorg-driver-fglrx"
-                VerifyExitCode "Install Radeon Driver"
+VerifyExitCode () {
+        local EXITCODE=$?
+        if [ "$EXITCODE" != "0" ] ; then
+        	echo "An error (Exit code $EXITCODE) occured during the last action"
+        	echo "$1"
+                exit 1
         fi
-elif lshwd | grep -qi 'VGA .* (intel)'; then
-        StartService "Installing Intel driver - this will take a few minutes" "apt-get -y -f install xserver-xorg-video-intel"
-        VerifyExitCode "Install intel Driver"
-elif lshwd | grep -qi 'VGA .* (i810)'; then
-        StartService "Installing Intel driver - this will take a few minutes" "apt-get -y -f install xserver-xorg-video-i810"
-        VerifyExitCode "Install i810 Driver"
-fi
-if [[ "$AVWizardOverride" == "1" || "$AVWizardDone" != "1" ]] ;then
-        # Make sure the currect NVidia driver is installed
-        installCorrectNvidiaDriver reboot
+}
 
-        ConfSet "AVWizardOverride" "0"
-        /usr/pluto/bin/AVWizard_Run.sh 1>/dev/null 2>/dev/null </dev/null
+Purge_Fglrx () {
+#Purge fglrx driver if card changes. TODO Definitely required for fglrx, consider doing the same for nVidia.
+	apt-get -y remove --purge xorg-driver-fglrx fglrx* --force-yes
+	apt-get -y install --reinstall libgl1-mesa-glx libgl1-mesa-dri fglrx-modaliases --force-yes
+	dpkg-reconfigure xserver-xorg
+	apt-get -y install --reinstall xserver-xorg-core --force-yes
+	cp /var/log/Xorg.0.log /var/log/Xorg.0.old.log
+	echo > /var/log/Xorg.0.log
+}
+. /usr/pluto/bin/Config_Ops.sh
+
+## Install driver based on the type of video card used
+#See if fglrx is currently being used
+fglrx_in_use=$(cat /var/log/Xorg.0.log | grep -o fglrx |sort -u)
+vga_pci=$(lspci -v | grep -i 'VGA')
+
+#Install nVidia driver
+if echo "$vga_pci" | grep -qi 'nvidia'; then
+	if [[ -n "$fglrx_in_use" ]]; then Purge_Fglrx; fi
+	apt-get -yf install pluto-nvidia-video-drivers
+	VerifyExitCode "Install Pluto nVidia Driver"
+	StartService "Installing nVidia driver - this may take a few minutes" ". /usr/pluto/bin/nvidia-install.sh"
+
+#Install Radeon driver
+elif echo "$vga_pci" | grep -qi 'radeon'; then
+	# Check to see if old Radeon card, if so, do not install new driver
+	if echo "$vga_pci" | grep -Eqi 'radeon .* (r5|r6|r7)'; then
+		if [[ -n "$fglrx_in_use" ]]; then Purge_Fglrx; fi
+		apt-get -yf install xserver-xorg-video-radeonhd
+		VerifyExitCode "Install Radeon Driver"
+	elif echo "$vga_pci" | grep -Eqi 'radeon ((9|X|ES)(1|2?)([0-9])(5|0)0|Xpress)'; then
+		if [[ -n "$fglrx_in_use" ]]; then Purge_Fglrx; fi
+		apt-get -yf install xserver-xorg-video-radeon
+		VerifyExitCode "Install Radeon Driver"
+	else apt-get -yf install fglrx
+		VerifyExitCode "Install fglrx Driver"
+	fi
+
+#Install Intel driver
+elif echo "$vga_pci" | grep -qi 'Intel'; then
+	if [[ -n "$fglrx_in_use" ]]; then Purge_Fglrx; fi
+	if echo "$vga_pci" | grep -qi 'Intel .* i128'; then
+		apt-get -yf install xserver-xorg-video-i128
+		VerifyExitCode "Install Intel Driver"
+	elif echo "$vga_pci" | grep -qi 'Intel .* i740'; then
+		apt-get -yf install xserver-xorg-video-i740
+		VerifyExitCode "Install Intel Driver"
+	else apt-get -yf install xserver-xorg-video-intel
+		VerifyExitCode "Install Intel Driver"
+		if echo "$vga_pci" | grep -qi 'G45'; then
+			apt-get -yf install libva-driver-i965
+			VerifyExitCode "Install Intel Acceleration"
+		fi
+	fi
+
+#Install VIA driver
+elif echo "$vga_pci" | grep -qi 'VIA'; then
+	if [[ -n "$fglrx_in_use" ]]; then Purge_Fglrx; fi
+	if echo "$vga_pci" | grep -Eqi 'VIA .* (s3|Savage)'; then
+		apt-get -yf install xserver-xorg-video-savage
+		VerifyExitCode "Install VIA Savage Driver"
+	elif echo "$vga_pci" | grep -qi 'VIA .* Chrome'; then
+		apt-get -yf install xserver-xorg-video-openchrome
+		VerifyExitCode "Install VIA Chrome Driver"
+	fi
+
+#Fallback to vesa
+else 
+	apt-get -yf install xserver-xorg-video-vesa
+fi
+
+## Install driver based on the type of video card used
+if [[ "$AVWizardOverride" == "1" || "$AVWizardDone" != "1" ]] ;then
+	Video_Driver
+	ConfSet "AVWizardOverride" "0"
+	/usr/pluto/bin/AVWizard_Run.sh 1>/dev/null 2>/dev/null </dev/null
 else
-        beep -l 50 -f 1000 -n -l 50 -f 1200 -n -l 50 -f 1400 -n -l 50 -f 1600 -n -l 50 -f 1800 -n -l 50 -f 2000 -n -l 50 -f 2200 &
+	beep -l 50 -f 1000 -n -l 50 -f 1200 -n -l 50 -f 1400 -n -l 50 -f 1600 -n -l 50 -f 1800 -n -l 50 -f 2000 -n -l 50 -f 2200 &
 fi
 
 killall WatchGyroRemote 2>/dev/null
