Refs #1354 - Fax reception -> convert to pdf -> mail to lmce user working, plus first preparations to send faxes

--- a/src/lmce-asterisk/root/etc/asterisk/extensions.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/extensions.conf
@@ -152,7 +152,7 @@ exten => _**.,n,Pickup(${EXTEN:2})
 
 [app-zapbarge]
 exten => 888,1,Macro(user-callerid,)
-exten => 888,n,Set(GROUP()=${CALLERID(number)})
+exten => 888,n,Set(GROUP()=${CALLERID(num)})
 exten => 888,n,Answer
 exten => 888,n,Wait(1)
 exten => 888,n,ZapBarge()
