--- a/src/lmce-asterisk/root/etc/asterisk/modules.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/modules.conf
@@ -19,7 +19,7 @@ load => pbx_config.so                  	; Text Extension Configuration  Requires
 ;load => pbx_functions.so               ; Builtin dialplan functions - Requires N/A 
 ;load => pbx_loopback.so                ; Loopback Dialplan Switch - Requires N/A 
 load => pbx_realtime.so                	; Realtime Dialplan Switch -  Requires N/A 
-;load => pbx_spool.so                   ; Outgoing Spool Support Requires - N/A 
+load => pbx_spool.so                   	; Outgoing Spool Support Requires - N/A 
 
 ;  Functions -- 
 load => func_aes.so						; AES dialplan functions
@@ -35,7 +35,7 @@ load => func_extstate.so				; Gets an extension's state in the dialplan
 
 ;  Database Call Detail Records -- 
 ;load => cdr_addon_mysql.so        		; Mysql CDR Backend - Requires ?
-;load => cdr_manager.so              	; Asterisk Call Manager CDR Backend - Requires N/A 
+;load => cdr_manager.so              	; Call Manager CDR Backend - Requires N/A 
 
 ;  Channels -- 
 load => chan_iax2.so            		; Inter Asterisk eXchange (Ver 2) - Requires res_crypto.so, res_features.so 
