Fixes #1445 - The original rule files sends the compile output to debian/tmp where it should end up in debian/chan-sccp-b

--- a/ubuntu/asterisk/chan_sccp_v4/debian/rules
+++ b/ubuntu/asterisk/chan_sccp_v4/debian/rules
@@ -60,7 +60,7 @@ install: build
 	dh_installdirs
 
 	# Add here commands to install the package into debian/tmp
-	$(MAKE) DESTDIR=$(CURDIR)/debian/tmp install
+	$(MAKE) DESTDIR=$(CURDIR)/debian/chan-sccp-b install
 
 
 # Build architecture-independent files here.
