Refs #1449,#1332 - Added cdr tables, tried to get GVoice working for outbound voice calls

--- a/src/lmce-asterisk/root/etc/asterisk/modules.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/modules.conf
@@ -34,13 +34,11 @@ load => func_timeout.so					; Channel timeout dialplan functions
 load => func_extstate.so				; Gets an extension's state in the dialplan
 
 ;  Database Call Detail Records -- 
-;load => cdr_addon_mysql.so        		; Mysql CDR Backend - Requires ?
-;load => cdr_manager.so              	; Call Manager CDR Backend - Requires N/A 
+load => cdr_mysql.so        			; Mysql CDR Backend - Requires ?
 
 ;  Channels -- 
 load => chan_iax2.so            		; Inter Asterisk eXchange (Ver 2) - Requires res_crypto.so, res_features.so 
 load => chan_local.so           		; Show status of local channels-  Requires N/A 
-;load => chan_mgcp.so           		; Media Gateway Control Protocol (MGCP) - Requires res_features.so 
 load => chan_gtalk.so           		; Gtalk Channel Driver
 ;load => chan_phone.so          		; Linux Telephony API Support - Requires N/A 
 load => chan_sip.so             		; Session Initiation Protocol (SIP) -  Requires res_features.so 
