--- a/src/lmce-asterisk/root/etc/asterisk/cdr_mysql.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/cdr_mysql.conf
@@ -1,7 +1,9 @@
-[global] 
- hostname=localhost 
- dbname=asteriskcdrdb 
- password=
- user=root
- port=3306 
+[global]
+ ;hostname=localhost
+ dbname=asterisk
+ table=cdr
+ password=lmce
+ user=asteriskuser
+ ;port=3306
  sock=/var/run/mysqld/mysqld.sock
+ userfield=1
