--- a/src/lmce-asterisk/root/etc/asterisk/modules.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/modules.conf
@@ -64,7 +64,7 @@ load => codec_ulaw.so           		; Mu-law Coder/Decoder - Requires N/A
 ;load => format_g726.so                 ; Raw G.726 (16/24/32/40kbps) data - Requires N/A 
 load => format_g729.so                  ; Raw G729 data - Requires N/A 
 load => format_gsm.so                   ; Raw GSM data - Requires N/A 
-;load => format_h263.so                 ; Raw h263 data - Requires N/A 
+load => format_h263.so                  ; Raw h263 data - Requires N/A 
 ;load => format_ilbc.so                 ; Raw iLBC data - Requires N/A 
 ;load => format_jpeg.so                 ; JPEG (Joint Picture Experts Group) Image - Requires N/A 
 ;load => format_mp3.so                  ; MP3 - Requires N/A
