--- a/src/Photo_Screen_Saver/Makefile
+++ b/src/Photo_Screen_Saver/Makefile
@@ -20,7 +20,7 @@ sources = Main.cpp Photo_Screen_Saver.cpp $(Gen_Dev_Files)
 #<-dceag-mh-e->
 
 CXXFLAGS +=
-CPPFLAGS += -I/usr/include/SDL -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include
+CPPFLAGS += -I/usr/include/SDL `pkg-config --cflags --libs glib-2.0`
 LDFLAGS += -lGL -lGLU -lSDL -lSDL_image -lSDL_ttf -lXrender -lglib-2.0 -lXmu -lSDL_gfx
 XTRALDLIBS =
 
