--- a/src/lmce-asterisk/root/etc/asterisk/modules.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/modules.conf
@@ -40,7 +40,6 @@ load => cdr_mysql.so        			; Mysql CDR Backend - Requires ?
 load => chan_iax2.so            		; Inter Asterisk eXchange (Ver 2) - Requires res_crypto.so, res_features.so 
 load => chan_local.so           		; Show status of local channels-  Requires N/A 
 load => chan_gtalk.so           		; Gtalk Channel Driver
-;load => chan_phone.so          		; Linux Telephony API Support - Requires N/A 
 load => chan_sip.so             		; Session Initiation Protocol (SIP) -  Requires res_features.so 
 load => chan_sccp.so            		; LinuxMCE SCCP support 
 ;load => chan_dahdi.so            		; DAHDI Telephony Driver w/PRI & SS7
@@ -48,118 +47,38 @@ load => chan_sccp.so            		; LinuxMCE SCCP support
 ;  Codecs -- 
 load => codec_adpcm.so          		; Adaptive Differential PCM Coder/Decoder - Requires N/A 
 load => codec_alaw.so           		; A-law Coder/Decoder - Requires N/A 
-;load => codec_a_mu.so          		; A-law and Mulaw direct Coder/Decoder -  Requires N/A 
-;load => codec_g723.so          		; G.723 Codect Translator - Requires N/A
-load => codec_g726.so           		; ITU G.726-32kbps G726 Transcoder - Requires N/A 
-;load => codec_g729.so          		; G729/PCM16 (signed linear) Codec Translator - Requires N/A
-load => codec_gsm.so            		; GSM/PCM16 (signed linear) Codec Translat - Requires N/A 
-;load => codec_ilbc.so          		; iLBC/PCM16 (signed linear) Codec Translat - Requires N/A 
-;load => codec_lpc10.so         		; LPC10 2.4kbps (signed linear) Voice Codec Translat - Requires N/A 
-;load => codec_speex.so         		; Speex/PCM16 (signed linear) Codec Translat - Requires N/A
 load => codec_ulaw.so           		; Mu-law Coder/Decoder - Requires N/A 
+load => codec_gsm.so            		; GSM/PCM16 (signed linear) Codec Translat - Requires N/A 
+load => codec_g722.so           		; ITU G.726-32kbps G726 Transcoder - Requires N/A 
+;load => codec_g726.so           		; ITU G.726-32kbps G726 Transcoder - Requires N/A 
+;load => codec_speex.so         		; Speex/PCM16 (signed linear) Codec Translat - Requires N/A
 
 ;  Formats -- 
-;load => format_au.so                   ; Sun Microsystems AU format (signed linear) - Requires N/A
-;load => format_g723.so                 ; Raw G.723 data - Requires N/A 
-;load => format_g726.so                 ; Raw G.726 (16/24/32/40kbps) data - Requires N/A 
 load => format_g729.so                  ; Raw G729 data - Requires N/A 
 load => format_gsm.so                   ; Raw GSM data - Requires N/A 
 load => format_h263.so                  ; Raw h263 data - Requires N/A 
-;load => format_ilbc.so                 ; Raw iLBC data - Requires N/A 
-;load => format_jpeg.so                 ; JPEG (Joint Picture Experts Group) Image - Requires N/A 
-;load => format_mp3.so                  ; MP3 - Requires N/A
-;load => format_pcm_alaw.so             ; Raw aLaw 8khz PCM Audio support - Requires N/A
+load => format_h264.so                  ; Raw h264 data - Requires N/A 
 load => format_pcm.so                   ; Raw uLaw 8khz Audio support (PCM) - Requires N/A 
 load => format_sln.so                   ; Raw Signed Linear Audio support (SLN) -  Requires N/A 
-;load => format_vox.so                  ; Dialogic VOX (ADPCM) File Format - Requires N/A 
 load => format_wav_gsm.so               ; Microsoft WAV format (Proprietary GSM) - Requires N/A 
 load => format_wav.so                   ; Microsoft WAV format (8000hz Signed Linear) - Requires N/A 
 
 ;  Applications -- 
-;load => app_addon_sql_mysql.so ; Do several mySQLy things - Requires ?
-;load => app_adsiprog.so        ; Asterisk ADSI Programming Application -  Requires res_adsi.so 
-;load => app_alarmreceiver.so   ; Alarm Receiver for Asterisk -  Requires N/A 
-;load => app_authenticate.so    ; Authentication Application - Requires N/A 
-load => app_cdr.so              ; Tell Asterisk to not maintain a CDR for the current call - Requires N/A 
-;load => app_chanisavail.so     ; Check if channel is available - Requires N/A 
-;load => app_chanspy.so         ; Listen to the audio of an active channel - Requires N/A 
-;load => app_controlplayback.so ; Play a file with fast forward and rewind - Requires N/A 
-;load => app_curl.so            ; ? - Requires N/A 
-load => app_confbridge.so		; Conference Bridge Application - Replaces MeetMe, does not require dahdi
-load => app_db.so               ; Database access functions for Asterisk -  Requires N/A 
-load => app_dial.so             ; Dialing Application - Requires res_features.so, res_musiconhold.so 
-;load => app_dictate.so         ; Virtual Dictation Machine - Requires N/A 
-;load => app_directed_pickup.so ; Directed Call Pickup Application - Requres ?
-;load => app_directory.so       ; Provide directory of voicemail extensions - Requires N/A 
-;load => app_disa.so            ; Allows someone from outside an "internal" system dialtone - Requires N/A 
-;load => app_dumpchan.so        ; Dump Info About The Calling Channel - Requires N/A 
-load => app_echo.so             ; Echo audio read from channel back to the channel - Requires N/A 
-;load => app_enumlookup.so      ; EnumLookup is deprecated.  Use ENUMLOOKUP() function - Requires N/A 
-;load => app_eval.so            ; Reevaluates strings - Requires N/A 
-;load => app_exec.so            ; Allows an arbitrary application to be invoked even when not hardcoded into the dialplan. - Requires N/A 
-;load => app_externalivr.so     ; External IVR Interface Application - Requires ?
-;load => app_festival.so        ; Simple Festival Interface - Requires N/A 
-;load => app_flash.so           ; Flashes a Zap Trunk - Requires ?
-;load => app_forkcdr.so         ; Fork The CDR into 2 separate entities. - Requires N/A 
-;load => app_getcpeid.so        ; Obtains and displays ADSI CPE ID and other info in order to properly setup zapata.conf for on-hook operations. - Requires N/A 
-;load => app_groupcount.so      ; Deprecated, please use the function GroupCount - Requires N/A 
-;load => app_hasnewvoicemail.so ; Indicator whether a voice mailbox has messages in a given folder. -  Requires N/A 
-;load => app_ices.so            ; Encode and Stream via icecast and ices - Requires N/A 
-;load => app_image.so           ; Sends an image on a channel. - Requires N/A 
-;load => app_intercom.so        ; Obsolete - does not load 
-;load => app_lookupblacklist.so ; Look up Caller*ID name/number from blacklist database - Requires N/A 
-;load => app_lookupcidname.so   ; Look up CallerID Name from local database - Requires N/A 
-load => app_macro.so            ; Macro Handling Application - Requires N/A 
-;load => app_math.so            ; Basic Math Functions - Requires N/A 
-;load => app_md5.so             ; MD5 checksum applications - Requires N/A 
-;load => app_meetme.so          ; MeetMe conference bridge - Requires ?
-;load => app_milliwatt.so       ; Generate a Constant 1000Hz tone at 0dbm (mu-law) - Requires N/A 
-;load => app_mixmonitor.so      ; Records the audio on the current channel to the specified file. - Requires ?
-;load => app_mp3.so             ; Play an MP3 file or stream - Requires N/A 
-;load => app_nbscat.so          ; Play an NBS local stream - Requires N/A 
-;load => app_page.so            ; Places outbound calls and dumps them into a conference bridge, muted - Requires ?
-;load => app_parkandannounce.so ; Call Parking and Announce Application - Requires res_features.so 
-load => app_playback.so         ; Sound File Playback Application - Requires N/A 
-load => app_playtones.so		; Playtones Application
-;load => app_privacy.so         ; Require phone number to be entered, if no CallerID sent - Requires N/A 
-;load => app_queue.so           ; Queue handling applications - Requires res_features.so, res_monitor.so, res_musiconhold.so 
-;load => app_random.so          ; Conditionally branches, based upon a probability - Requires N/A 
-load => app_read.so             ; Reads a #-terminated string of digits - Requires N/A 
-;load => app_readfile.so        ; Stores output of file into a variable - Requires N/A 
-;load => app_record.so          ; Record to a file - Requires N/A 
-;load => app_rxfax.so           ; Receive a FAX to a file - Requires ?
-;load => app_saycountpl.so      ; Polish counting grammar - Requires ?
-load => app_sayunixtime.so      ; Says a specified time in a custom format - Requires N/A 
-;load => app_senddtmf.so        ; Sends arbitrary DTMF digits - Requires N/A 
-;load => app_sendtext.so        ; Sends text to current channel (callee). - Requires N/A 
-;load => app_setcallerid.so     ; Set Caller*ID on a call to a new value. -  Requires N/A 
-;load => app_setcdruserfield.so ; Append to the CDR user field - Requires N/A 
-;load => app_settransfercapability.so   ; Set ISDN Transfer Capability - Requires N/A 
-;load => app_sms.so                     ; SMS/PSTN handler - Requires N/A 
-;load => app_softhangup.so              ; Hangs up the requested channel - Requires N/A 
+load => app_cdr.so              		; Tell Asterisk to not maintain a CDR for the current call - Requires N/A 
+load => app_confbridge.so				; Conference Bridge Application - Replaces MeetMe, does not require dahdi
+load => app_db.so               		; Database access functions for Asterisk -  Requires N/A 
+load => app_dial.so             		; Dialing Application - Requires res_features.so, res_musiconhold.so 
+load => app_echo.so             		; Echo audio read from channel back to the channel - Requires N/A 
+load => app_macro.so            		; Macro Handling Application - Requires N/A 
+load => app_playback.so         		; Sound File Playback Application - Requires N/A 
+load => app_playtones.so				; Playtones Application
+load => app_read.so             		; Reads a #-terminated string of digits - Requires N/A 
+load => app_sayunixtime.so      		; Says a specified time in a custom format - Requires N/A 
 load => app_stack.so                   	; Dialplan subroutines (Gosub, Return, etc) - Requires ?
-;load => app_striplsd.so                ; Deprecated - Requires N/A 
-;load => app_substring.so               ; Deprecated - Requires N/A 
 load => app_system.so                   ; Execute a system command - Requires N/A 
-;load => app_talkdetect.so              ; Playback with Talk Detection - Requires N/A 
-;load => app_test.so                    ; Interface Test Application - Requires N/A 
-;load => app_transfer.so                ; Transfer caller to remote extension - Requires N/A 
-;load => app_txfax.so                   ; Trivial FAX Transmit Application - Requires ?
-;load => app_txtcidname.so              ; The TXTCIDName deprecated in favor of the TXTCIDNAME dialplan function - Requires N/A 
-;load => app_url.so                     ; Send URL Applications -  Requires N/A 
-;load => app_userevent.so               ; Send an arbitrary event to the manager interface - Requires N/A 
-;load => app_verbose.so                 ; Send arbitrary text to verbose output -  Requires N/A 
 load => app_voicemail.so                ; Comedian Mail (Voicemail System) - Requires res_adsi.so 
-;load => app_waitforring.so             ; Waits until first ring after specified time - Requires N/A 
-;load => app_waitforsilence.so          ; Waits for silence of specified time - Requires N/A 
-;load => app_while.so                   ; While Loops and Conditional Execution - Requires N/A 
-;load => app_zapateller.so              ; Block Telemarketers with Special Information Tone - Requires N/A 
-;load => app_zapbarge.so                ; Barges in on a specified zap channel - Requires ?
-;load => app_zapras.so                  ; Executes a RAS server using pppd on the given channel - Requires ?
-;load => app_zapscan.so                 ; Scan Zap channels to monitor calls - Requires ?
 
 ;  Bridging -- 
 load => bridge_builtin_features.so		; Built in bridging features
 load => bridge_softmix.so				; Multi-party software based channel mixing
-;load => bridge_simple.so				; Simple two channel bridging module
 load => bridge_multiplexed.so			; Multiplexed two channel bridging module
