Refs #1474 - Added forgotten commit to make cdr_mysql.conf go to realtime. SQL data already there

--- a/src/lmce-asterisk/root/etc/asterisk/extconfig.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/extconfig.conf
@@ -17,3 +17,5 @@ rtp.conf => mysql,general,ast_config
 ccss.conf => mysql,general,ast_config
 jabber.conf => mysql,general,ast_config
 gtalk.conf => mysql,general,ast_config
+cdr_mysql.conf => mysql,general,ast_config
+
